@@ -1,3 +1,8 @@
+2008-04-08  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/gw/gconf-support.c (scm_c_gconf_value_to_scm): Use newer
+	GValue accessors.
+
 2007-12-10  Andy Wingo  <wingo@pobox.com>
 
 	* == Released guile-gnome-platform version 2.15.96 ==
